--- a/chatClient.UnitTests/chatClient.UnitTests.csproj
+++ b/chatClient.UnitTests/chatClient.UnitTests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\chatClient\chatClient.csproj" />
+    <ProjectReference Include="..\chatServer\chatServer.csproj" />
   </ItemGroup>
 
 </Project>
